tests/snapshots/rusty__plainext.snap
---
source: tests/rusty.rs
expression: "String::from_utf8(backend.0).unwrap()"
---
error[E0412]: cannot find type `Lab` in this scope
   ╭─[<unkown>:255:9]

         view: Option<SourceView<Lab>>,

=> not found in this scope 218..221
help: you might be missing a type parameter
   ╭─[<unkown>:255:9]

         view: Option<SourceView<Lab>>,

=> <empty label> 218..221
error[E0425]: cannot find value `labels` in this scope
   ╭─[<unkown>:255:9]

         labels: Vec<Label<Level>>,
     }
     
     impl<Level> SourceView<Level> {
         pub fn new(source: &'static str) -> Self {
             Self { source, labels }

=> a field by that name exists in `Self` 1386..1411
=> <empty label> 1518..1524

